--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ include_directories(include ${catkin_INCLUDE_DIRS})
 
 add_library(DepthImageToLaserScan src/DepthImageToLaserScan.cpp)
 target_link_libraries(DepthImageToLaserScan ${catkin_LIBRARIES})
-target_compile_options(DepthImageToLaserScan PRIVATE -g -std=c++11 -Wall -fopt-info-vec-optimized-missed-all -ftree-vectorize -funsafe-math-optimizations -ffast-math)
+target_compile_options(DepthImageToLaserScan PRIVATE -g -std=c++11 -Wall -fopt-info-vec-optimized -ftree-vectorize -ffast-math)
 
 
 add_library(DepthImageToLaserScanROS src/DepthImageToLaserScanROS.cpp)
