Additional changes necessary for operating in a different namespace from original package

--- a/cfg/Depth.cfg
+++ b/cfg/Depth.cfg
@@ -1,6 +1,6 @@
 #! /usr/bin/env python
 
-PACKAGE='depthimage_to_laserscan'
+PACKAGE='full_depthimage_to_laserscan'
 
 from dynamic_reconfigure.parameter_generator_catkin import *
 
@@ -15,4 +15,4 @@ gen.add("range_max",            double_t, 0,                                "Max
 gen.add("output_frame_id",      str_t,    0,                                "Output frame_id for the laserscan.",   "camera_depth_frame")
 gen.add("floor_dist",           double_t, 0,                                "Vertical distance between camera and floor",                       .25,    0,    1.0)
 gen.add("overhead_dist",           double_t, 0,                                "Vertical distance between camera and top of robot",                       .15,    0,    1.0)
-exit(gen.generate(PACKAGE, "depthimage_to_laserscan", "Depth"))
+exit(gen.generate(PACKAGE, "full_depthimage_to_laserscan", "Depth"))
